load flow usages async